--- a/index.html
+++ b/index.html
@@ -17,3 +17,24 @@
     </nav>
 </header>
 </head>
+<body>
+  <div id="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/M0sVT2535hM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<section>
+<form id="form" action="https://www.freecodecamp.com/email-submit">
+    <!--email input field-->
+<input type="email" id="email" name="email" placeholder="Enter your email address" required /> 
+<br>
+
+<input type="submit" id="submit" value="Get Started" class="btn" />
+</form>
+</section id="how It Works">
+<ul class="workings">
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 2</li>
+    <li>item 2</li>
+    <li>item 2</li>
+    </ul>
+<section>    
