--- a/index.html
+++ b/index.html
@@ -38,3 +38,25 @@
     <li>item 2</li>
     </ul>
 <section>    
+    <ul class="workings">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        </ul>
+</section>
+<section id="pricing">
+    <ul class="workings">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        <li>item 2</li>
+        </ul>
+</section>
+<section id="about Us">
+
+</section>
+    </body>
+</html>
